# nostr-identity

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  CHANGES.md  CLIENT_SIDE_ZKP.md  COMPLETE_FIX_GUIDE.md  Cargo.toml  DELEGATOR_COMPLETE_GUIDE.md  DELEGATOR_IN_TEE_IMPLEMENTATION.md  DELEGATOR_PRIVACY_PATTERN.md  FINAL_BUILD_SUMMARY.md  FINAL_COMPLETE_SUMMARY.md  FINAL_DECISION_OUTLAYER_TEE.md  FINAL_PRIVACY_SOLUTION.md  FINAL_SUMMARY.md  FULL_SYSTEM_INTEGRATION.md  MPC_DELEGATOR_GUIDE.md  NOSTR_KEY_COMPLIANCE.md  OWNERSHIP_PROOF_GUIDE.md  PRODUCTION_TODOS_FIXED.md  QUICK_START.md  README.md  REAL_SOLUTION.md  REAL_SOLUTION_VALIDATOR_OR_ZK.md  REAL_ZKP_COMPLETE.md  SECURITY_FIX.md  SMART_CONTRACT_EXPLAINED.md  STATUS  SUCCESS.md  TEE_BUILD.md  TEE_SAFETY_FIXES.md  TEE_ZKP_COMPLETE.md  TEE_ZKP_FIXED.md  TEST_RESULTS.md  TRUE_PRIVACY_PLAN.md  VERIFICATION.md  WASM_BUILD_COMPLETE.md  WHAT_EXISTS_NOW.md  ZKP_LIBRARY_OPTIONS.md  (+32 more)
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  trace
.next/cache/webpack/client-production/: 1.pack  10.pack  11.pack  12.pack  13.pack  14.pack  15.pack  16.pack  17.pack  2.pack  3.pack  4.pack  5.pack  6.pack  7.pack  8.pack  9.pack  index.pack  index.pack.old
.next/cache/webpack/edge-server-production/: index.pack  index.pack.old
.next/cache/webpack/server-production/: 1.pack  2.pack  3.pack  4.pack  index.pack  index.pack.old
.next/server/: middleware-build-manifest.js  middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
.next/server/chunks/: 173.js  734.js
.next/server/pages/: 500.html
.next/static/chunks/: 472.d6673cca47a7c55e.js  507-fa731b38ae9ede95.js  874-8fc42cb64c08e33f.js  main-app-467a8c1ace9f0e7d.js  webpack-334f44254771cd90.js
.next/static/chunks/app/: layout-c7f045bb972c5402.js  layout-f33fef90c6322877.js  page-2baf8fdbd90e2725.js  page-ce7600925dc42d24.js
.next/static/css/: 4a22905af04259ee.css  6c098fbdbb6ae7c6.css
.next/static/media/: nostr_identity_zkp_wasm_bg.27c382c6.wasm
.next/types/app/: layout.ts  page.ts
.vercel/: project.json
.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
app/: actions.ts  globals.css  layout.tsx  page.tsx
apps/web/: .env.example  package.json  tsconfig.json  vercel.json
apps/web/.vercel/: project.json
apps/web/app/: actions.ts  layout.tsx  page.tsx
archived/delegator-service/: README.md
archived/nostr-identity-complete-contract/: Cargo.toml
archived/nostr-identity-delegator-contract/: Cargo.toml
archived/nostr-identity-delegator-contract/src/: lib.rs
contracts/nostr-identity/: Cargo.toml
contracts/nostr-identity-aurora/: Cargo.toml  README.md
contracts/nostr-identity-aurora/aurora/: Groth16Verifier.sol
contracts/nostr-identity-aurora/src/: lib.rs
contracts/nostr-identity-contract/: Cargo.toml
contracts/nostr-identity-contract-zkp-tee/: Cargo.toml  README.md
contracts/nostr-identity-contract-zkp-tee/examples/: nep413_test.rs
contracts/nostr-identity-contract-zkp-tee/src/: lib.rs  lib_test.rs  main.rs  near_tx.rs
contracts/nostr-identity-contract/src/: lib.rs
contracts/nostr-identity/src/: lib.rs
contracts/tee/: Cargo.toml  test_e2e.sh  test_local.sh
contracts/tee/src/: lib.rs  main.rs
contracts/writer/: Cargo.toml  tail
contracts/writer/src/: lib.rs
docs/: BLOCKCHAIN_REGISTRATION_FIX.md  COMPILATION_VERIFICATION.md  FEATURE_FLAGS.md  MONOREPO_DEPLOYMENT.md  SECURITY_AUDIT.md
docs/notes/: BUILD_REPORT.md  COMPLETE_COMPARISON.md  COMPLETE_FIX_LOG.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  FINAL_STATUS.md  FULL_ZKP_COMPLETE.md  GITHUB_UPDATE_COMPLETE.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_STATUS.md  INTEGRATION_FIX.md  MPC_VERIFICATION_NEEDED.md  NEAR_MPC_REALITY_CHECK.md  OUTLAYER_PAYMENT_BLOCKER.md  PRIVACY_ANALYSIS_NPUB.md  PRIVACY_FLOW_STATUS.md  PRIVACY_QUICK_REFERENCE.md  PRODUCTION_BUILD_GUIDE.md  REAL_TEST_RESULTS.md  SESSION_COMPLETE.md  SMART_CONTRACT_COMPARISON.md  SMART_CONTRACT_EXAMPLE.md  TODO_FIXES.md  TRUE_PRIVACY.md  VERIFICATION_GUIDE.md  VERIFICATION_RESULTS.md
nostr-identity-complete-contract/: README.md
nostr-identity-complete-contract/src/: lib.rs
nostr-identity-contract/: README.md
nostr-identity-contract-zkp-tee/: Cargo.toml  README.md
nostr-identity-contract-zkp-tee/src/: lib.rs  main.rs
nostr-identity-contract/src/: lib.rs  main.rs
nostr-identity-smart-contract/: Cargo.toml
nostr-identity-smart-contract/src/: lib.rs
nostr-identity-verification-contract/src/: lib.rs
nostr-identity-zkp/: COMPARISON.md  README.md
nostr-identity-zkp/client/: generate_identity.ts  package.json
scripts/: clean.sh  e2e_verify.ts  fix_tee_contract_integration.sh  fix_tee_delegator.sh  gen_vk.rs  test-full-flow.sh  test-integration.sh  test_tee_zkp_complete.sh  test_zkp.sh
services/delegator/: package.json
services/delegator/src/: index.ts
services/zkp/: SUMMARY.md
services/zkp/circuit/: near_ownership.circom  setup.sh
services/zkp/server/: index.ts  package.json
