[package]
name = "nostr-identity-zkp-tee"
version = "2.0.0"
edition = "2021"

[features]
default = []
outlayer-tee = []
local-test = ["minreq"]

[[bin]]
name = "nostr-identity-zkp-tee"
path = "contracts/nostr-identity-contract-zkp-tee/src/main.rs"

[[bin]]
name = "test_nep413_verify"
path = "contracts/nostr-identity-contract-zkp-tee/src/bin/test_nep413_verify.rs"

[[bin]]
name = "test_borsh_array_ref"
path = "test-borsh-array-ref.rs"

[lib]
name = "nostr_identity_zkp_tee"
path = "contracts/nostr-identity-contract-zkp-tee/src/lib.rs"

[dependencies]
# Crypto
ed25519-dalek = "2.1"
k256 = { version = "0.13", features = ["ecdsa"] }

# Borsh serialization
borsh = { version = "1.5", features = ["derive"] }

# HTTP client for WASI P2 (OutLayer TEE)
wasi-http-client = "0.2"
# HTTP for local testing
minreq = { version = "2", features = ["https-rustls"], optional = true }

# ZKP
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-serialize = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["crh", "merkle_tree"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
rand = "0.8"
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"
sha2 = "0.10"
lazy_static = "1.4"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
