[package]
name = "nostr-identity-zkp-tee"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "nostr-identity-zkp-tee"
path = "src/main.rs"

[lib]
name = "nostr_identity_zkp_tee"
path = "src/lib.rs"

[dependencies]
ed25519-dalek = "2.1"
k256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
lazy_static = "1.4"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
