[package]
name = "nostr-identity"
version = "2.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gen-proof"
path = "src/bin/gen_proof.rs"

[dependencies]
near-sdk = { version = "=5.8.1", features = ["legacy"] }
borsh = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-crypto-primitives = "0.4"
ark-relations = "0.4"
ark-std = "0.4"
rand = "0.8"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
