[package]
name = "nostr-identity"
version = "4.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gen-proof"
path = "src/bin/gen_proof.rs"
required-features = ["bin"]

[dependencies]
near-sdk = { version = "=5.8.1", features = ["legacy"] }
borsh = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"

# For gen-proof binary only
ark-bn254 = { version = "0.4", optional = true }
ark-groth16 = { version = "0.4", optional = true }
ark-serialize = { version = "0.4", optional = true }
ark-ff = { version = "0.4", optional = true }
ark-ec = { version = "0.4", optional = true }
ark-crypto-primitives = { version = "0.4", optional = true }
ark-relations = { version = "0.4", optional = true }
ark-std = { version = "0.4", optional = true }
num-bigint = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
getrandom = { version = "0.2", features = ["custom"], optional = true }

[features]
default = []
bin = ["ark-bn254", "ark-groth16", "ark-serialize", "ark-ff", "ark-ec", "ark-crypto-primitives", "ark-relations", "ark-std", "num-bigint", "rand", "getrandom"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
