[package]
name = "nostr-identity-tee"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nostr-identity-tee"
path = "src/main.rs"

[dependencies]
ed25519-dalek = "2.1"      # Pure Rust ed25519 (no C deps)
k256 = { version = "0.13", features = ["ecdsa"] }  # Pure Rust secp256k1
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
