[package]
name = "nostr-identity"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "=5.8.1", features = ["legacy"] }
borsh = { version = "1.0.0", features = ["derive"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
near-sdk = { version = "=5.8.1", features = ["unit-testing", "legacy"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
