[package]
name = "nostr-writer"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.24.1", features = ["legacy"] }
borsh = { version = "1.6", features = ["unstable__schema"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
